bk_ida/gccida/c2/true_dependence
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/true_dependence/src/alias.c:2483:32: error: must use 'enum' tag to refer to type 'machine_mode'
int  true_dependence( rtx mem, machine_mode mem_mode, rtx x, int ( *varies)( rtx, int)) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/true_dependence/src/alias.c:2503:4: error: expected ';' after expression
rtx base_term; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/true_dependence/src/alias.c:2503:5: error: use of undeclared identifier 'base_term'
rtx base_term; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/true_dependence/src/alias.c:2515:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( _QWORD *)x[1]; 
                ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/true_dependence/src/alias.c:2517:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = ( _QWORD *)mem[1]; 
                 ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/true_dependence/src/alias.c:2606:1: error: use of undeclared identifier 'base_term'
base_term = find_base_term( rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/true_dependence/src/alias.c:2608:24: error: use of undeclared identifier 'base_term'
|| ( v26 = *( _DWORD *)base_term, ( _WORD)v26 != 67) && ( ( _WORD)v26 != 68 || ( v26 & 0x4000000) == 0) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/true_dependence/src/alias.c:2607:7: error: use of undeclared identifier 'base_term'
if ( !base_term 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/true_dependence/src/alias.c:2610:36: error: use of undeclared identifier 'machine_mode'
if ( base_alias_check( rtx, v19, ( machine_mode)*( ( unsigned __int8 *)v4 + 2), mem_mode) ) 
                                   ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/true_dependence/src/obj/alias.o] Error 1
